--- a/index.html
+++ b/index.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tec Blog</title>
+    <title>TecBlog - o seu blog de tecnologia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <div class="logo">
+            <h1>Tec <span class="branco">Blog</span></h1>
+        </div>
+        <div class="menu">
+            <a href="index.html">Home</a>
+            <a href="jogos.html">Jogos</a>
+            <a href="celulares.html">Celulares</a>
+            <a href="informatica.html">Informatica</a>
+            <a href="eletronicos.html">Eletronicos</a>
+        </div>
+    </header>
+    <main id="principal">
+        <section class="postagens">
+            <article class="posts">
+                <h2>Titulo 1</h2>
+                <span class="data">postado 20 de mar 2022</span>
+                <img src="imagens/imagem1.jpg" width="620px" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea molestiae eius cum temporibus nam quae facere omnis quos sunt. Esse maxime expedita laborum nulla ipsum molestias exercitationem voluptatem quos?</p>
+                <a href="#">Leia mais</a>
+            </article>
+            <article class="posts">
+                <h2>Titulo 2</h2>
+                <span class="data">postado 10 de mar 2022</span>
+                <img src="imagens/imagem2.jpg" width="620px" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ea molestiae eius cum temporibus nam quae facere omnis quos sunt. Esse maxime expedita laborum nulla ipsum molestias exercitationem voluptatem quos?</p>
+                <a href="#">Leia mais</a>
+            </article>
+        </section>
+        <section class="menu-lateral">
+            <article class="lateral">
+                <h3>Postagens recentes</h3>
+                <article class="postagenlado">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quae quaerat maiores sint praesentium illo! Temporibus mollitia aliquam maxime unde cum explicabo labore voluptates qui vel tempore molestiae, modi facilis.</p>
+                    <a href="#">Leia mais</a>
+                </article>
+                <article class="postagenlado" style="border: none;">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quae quaerat maiores sint praesentium illo! Temporibus mollitia aliquam maxime unde cum explicabo labore voluptates qui vel tempore molestiae, modi facilis.</p>
+                    <a href="#">Leia mais</a>
+                </article>
+            </article>
+        </section>
+        <section class="menu-lateral">
+            <article class="lateral">
+                <h3>Cartegorias</h3>
+                <a href="jogos.html">Jogos</a><br>
+                <a href="celulares.html">Celulares</a><br>
+                <a href="informatica.html">Informatica</a><br>
+                <a href="eletronicos.html">Eletronicos</a><br>
+            </article>
+        </section>
+        <footer id="rodape">
+            Todos os direitos reservados
+        </footer>
+    </main>
 </body>
 </html>
